snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.081412-1.jar.md5
b784bc18fe7f0772dc4cceeab890d888